--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
       <img src="https://openhome.cc/Gossip/images/caterpillar_small.jpg">
 
-      首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。<br></br>
+      首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例，你的瀏覽器必須支援 ES6 模組。<br></br>
       <textarea id="code">print 'Fibonacci number\n'
 n = 10
 fn1 = 1
