--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style> 
   </head>
   <body>
-      <a href="https://openhome.cc"></a><img src="https://openhome.cc/Gossip/images/caterpillar_small.jpg"></a>
+      <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small.jpg"></a>
 
       首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例，你的瀏覽器必須支援 ES6 模組。<br></br>
       <textarea id="code">print 'Fibonacci number\n'
