--- a/index.html
+++ b/index.html
@@ -24,7 +24,26 @@
   <body>
       <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
 
-      首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例，你的瀏覽器必須支援 ES6 模組。<br></br>
+      <p>首次嘗試打造的玩具語言，文法大概是這樣：</p>
+      
+      <div>
+            <strong>&lt;primitive&gt;&nbsp; ::= ([0-9]+) | ('.*')<br>
+                &lt;variable&gt;&nbsp;&nbsp; ::= ([a-zA-Z_]+[a-zA-Z_0-9]*)<br>
+                &lt;factor&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= (-?) &lt;primitive&gt; | (-?)
+                &lt;variable&gt; | &lt;expression&gt;<br>
+                &lt;expression&gt; ::= &lt;factor&gt; { (+|-) &lt;factor&gt; }<br>
+                &lt;assign&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= &lt;variable&gt; =
+                &lt;expression&gt;<br>
+                &lt;print&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::= "print"
+                &lt;expression&gt;<br>
+                &lt;until0&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= "until0" &lt;expression&gt;
+                "\n" { &lt;statement&gt; } "\n" "end" <br>
+                &lt;statement&gt;&nbsp; ::= &lt;print&gt; | &lt;asign&gt; |
+                &lt;until0&gt;<br>
+                &lt;program&gt;&nbsp;&nbsp;&nbsp; ::= { &lt;statement&gt; }&nbsp; </strong>
+      </div>
+      
+      <p>可用的指令組合可參考底下的費式數列範例，你的瀏覽器必須支援 ES6 模組。</p>
       <textarea id="code">print 'Fibonacci number\n'
 n = 10
 fn1 = 1
