--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>首次嘗試打造的玩具語言，文法大概是這樣：</p>
       
       <div>
-            <strong>&lt;primitive&gt;&nbsp; ::= ([0-9]+) | ('.*')<br>
+            <strong>&lt;primitive&gt;&nbsp; ::= NUMBER | ('.*')<br>
                 &lt;variable&gt;&nbsp;&nbsp; ::= ([a-zA-Z_]+[a-zA-Z_0-9]*)<br>
                 &lt;term&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= (-?) &lt;primitive&gt; | (-?)
                 &lt;variable&gt; | &lt;expression&gt;<br>
