--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。">
     <meta property="og:locale" content="zh_TW">
@@ -10,7 +10,7 @@
     <meta property="og:url" content="https://openhome.cc/Gossip/Computation/toy_lang/index.html">
     <meta property="og:image" content="https://openhome.cc/Gossip/images/caterpillar_small.jpg">
     <meta property="og:site_name" content="OPENHOME.CC">
-    <meta property="og:description" content="首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。">    
+    <meta property="og:description" content="首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。">
     <title>Toy</title>
     <style type="text/css">
         textarea {
@@ -19,32 +19,35 @@
            resize:none;
            overflow:auto;
         }   
-    </style> 
+    </style>
   </head>
-  <body>
-      <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
-
-      <p>首次嘗試打造的玩具語言，文法大概是這樣：</p>
-      
-      <div>
-            <strong>&lt;primitive&gt;&nbsp; ::= NUMBER | ('.*')<br>
-                &lt;variable&gt;&nbsp;&nbsp; ::= ([a-zA-Z_]+[a-zA-Z_0-9]*)<br>
-                &lt;term&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= (-?) &lt;primitive&gt; | (-?)
-                &lt;variable&gt; | &lt;expression&gt;<br>
-                &lt;expression&gt; ::= &lt;term&gt; { (+|-|*|/) &lt;term&gt; }<br>
-                &lt;assign&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= &lt;variable&gt; =
-                &lt;expression&gt;<br>
-                &lt;print&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::= "print"
-                &lt;expression&gt;<br>
-                &lt;until0&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= "until0" &lt;expression&gt;
-                "\n" { &lt;statement&gt; } "\n" "end" <br>
-                &lt;statement&gt;&nbsp; ::= &lt;print&gt; | &lt;asign&gt; |
-                &lt;until0&gt;<br>
-                &lt;program&gt;&nbsp;&nbsp;&nbsp; ::= { &lt;statement&gt; }&nbsp; </strong>
-      </div>
-      
-      <p>可用的指令組合可參考底下的費式數列範例，你的瀏覽器必須支援 ES6 模組。</p>
-      <textarea id="code">print 'Fibonacci number\n'
+  <body> <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
+    <p>首次嘗試打造的玩具語言，文法大概是這樣：</p>
+    <div> <strong>&lt;primitive&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::= NUMBER |
+        ('.*')<br>
+        &lt;variable&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::=
+        ([a-zA-Z_]+[a-zA-Z_0-9]*)<br>
+      </strong></div>
+    <div><strong>&lt;factor&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        ::= </strong><strong>(-?) &lt;primitive&gt; | (-?) &lt;variable&gt; |
+        &lt;expression&gt;</strong><strong> </strong></div>
+    <div><strong>&lt;term&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        ::= &lt;factor&gt; {(*|/) &lt;factor&gt;}<br>
+      </strong></div>
+    <div><strong> &lt;expression&gt;&nbsp; ::= &lt;term&gt; { (+|-) &lt;term&gt;
+        }<br>
+        &lt;assign&gt;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; ::=
+        &lt;variable&gt; = &lt;expression&gt;<br>
+        &lt;print&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        ::= "print" &lt;expression&gt;<br>
+        &lt;until0&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        ::= "until0" &lt;expression&gt; "\n" { &lt;statement&gt; } "\n" "end" <br>
+        &lt;statement&gt;&nbsp;&nbsp;&nbsp; ::= &lt;print&gt; | &lt;asign&gt; |
+        &lt;until0&gt;<br>
+        &lt;program&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::= {
+        &lt;statement&gt; }&nbsp; </strong> </div>
+    <p>可用的指令組合可參考底下的費式數列範例，運算式可使用括號，你的瀏覽器必須支援 ES6 模組。</p>
+    <textarea id="code">print 'Fibonacci number\n'
 n = 10
 fn1 = 1
 fn2 = 1
@@ -61,11 +64,13 @@ until0 n
     n = n - 1
 end
 print '\n'</textarea>
-<br><br>
-<button id="run">執行</button>
-<br><br>
-<textarea id="tty" style="background: #000;color:#fff;"></textarea>
-<script type="module">
+    <br>
+    <br>
+    <button id="run">執行</button>
+    <br>
+    <br>
+    <textarea id="tty" style="background: #000;color:#fff;"></textarea>
+    <script type="module">
     import {StmtTokenizer} from './js/tokenizer.js';
     import {AST, Context} from './js/ast.js';
     document.getElementById('run').addEventListener('click', _ => {
@@ -77,6 +82,5 @@ print '\n'</textarea>
                             .map(output => `${output}`.replace('\\n', '\n'))
                             .join('');
     });
-</script>
-  </body>
+</script> </body>
 </html>
