--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <div><strong>&lt;factor&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::= </strong><strong>(-?)
           &lt;primitive&gt; | (-?) &lt;variable&gt; | &lt;expression&gt;</strong><strong>
         </strong></div>
-      <div><strong>&lt;term&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          ::= &lt;factor&gt; {(*|/) &lt;factor&gt;}<br>
+      <div><strong>&lt;term&gt;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ::=
+          &lt;factor&gt; {(*|/) &lt;factor&gt;}<br>
         </strong></div>
     </code>
     <div><code><strong> &lt;expression&gt;&nbsp; ::= &lt;term&gt; { (+|-)
@@ -88,7 +88,7 @@ until0 n
 end
 print '\n'</code></strong></pre>
     <ul>
-        <li>實驗室</li>
+      <li>實驗室</li>
     </ul>
     <textarea id="code">print 'Hello, World\n'</textarea> <br>
     <br>
