--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body> <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
-    <p>首次嘗試打造的玩具語言，文法大概是這樣：</p>
+    <p>相關程式碼可在 <a href="https://github.com/JustinSDK/toy_lang">Github</a> 找到，這是首次嘗試打造的玩具語言，文法大概是這樣：</p>
     <div><code><strong>&lt;primitive&gt;&nbsp;&nbsp; ::= NUMBER | ('.*')<br>
           &lt;variable&gt;&nbsp;&nbsp;&nbsp; ::= ([a-zA-Z_]+[a-zA-Z_0-9]*)<br>
         </strong></code></div>
@@ -90,7 +90,7 @@ print '\n'</code></strong></pre>
     <ul>
       <li>實驗室</li>
     </ul>
-    <textarea id="code">print 'Hello, World\n'</textarea> <br>
+    <textarea id="code">print 'Hello, World'</textarea> <br>
     <br>
     <button id="run">執行</button> <br>
     <br>
