--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。">
     <meta property="og:locale" content="zh_TW">
-    <meta property="og:title" content="Toy">
+    <meta property="og:title" content="Toy Lang">
     <meta property="og:type" content="programming">
     <meta property="og:url" content="https://openhome.cc/Gossip/Computation/toy_lang/index.html">
     <meta property="og:image" content="https://openhome.cc/Gossip/images/caterpillar_small.jpg">
     <meta property="og:site_name" content="OPENHOME.CC">
-    <meta property="og:description" content="首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。">
-    <title>Toy</title>
+    <meta property="og:description" content="首次嘗試打造的玩具語言。">
+    <title>Toy Lang</title>
     <style type="text/css">
         textarea {
            width:100%;
