--- a/index.html
+++ b/index.html
@@ -94,13 +94,14 @@ print '\n'</code></strong></pre>
     <br>
     <button id="run">執行</button> <br>
     <br>
-    <textarea id="tty" style="background: #000;color:#fff;"></textarea>
+    <textarea readonly id="tty" style="background: #000;color:#fff;"></textarea>
     <script type="module">
     import {StmtTokenizer} from './js/tokenizer.js';
     import {Context, AST} from './js/parser.js';
     document.getElementById('run').addEventListener('click', _ => {
         let code = document.getElementById('code').value;
         let tty = document.getElementById('tty');
+        tty.textContent = '';
         new AST(new StmtTokenizer(code))
               .evaluate(new Context(output => {
                   tty.textContent += `${output}`.replace('\\n', '\n').replace('\\t', '\t');
