--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ print '\n'</code></strong></pre>
     <br>
     <button id="run">執行</button> <br>
     <br>
-    <textarea id="tty" style="background: #000;color:#fff;"></textarea>
+    <textarea readonly id="tty" style="background: #000;color:#fff;"></textarea>
     <script type="module">
     import {StmtTokenizer} from './js/tokenizer.js';
     import {AST} from './js/parser.js';
