--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="首次嘗試打造的玩具語言，可用的指令組合都在底下的費式數列範例。">
+    <meta name="description" content="首次嘗試打造的玩具語言。">
     <meta property="og:locale" content="zh_TW">
     <meta property="og:title" content="Toy Lang">
     <meta property="og:type" content="programming">
