--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="首次嘗試打造的玩具語言。">
     <meta property="og:locale" content="zh_TW">
     <meta property="og:title" content="Toy Lang">
-    <meta property="og:type" content="programming">
+    <meta property="og:type" content="programming language">
     <meta property="og:url" content="https://openhome.cc/Gossip/Computation/toy_lang/index.html">
     <meta property="og:image" content="https://openhome.cc/Gossip/images/caterpillar_small.jpg">
     <meta property="og:site_name" content="OPENHOME.CC">
