--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           "(" &lt;args&gt; ")"<br>
         </strong></code></div>
     <div><code><strong> &lt;statement&gt;&nbsp;&nbsp; ::= &lt;print&gt; |
-          &lt;asign&gt; | &lt;until0&gt; | &lt;func&gt;<br>
+          &lt;asign&gt; | &lt;until0&gt; | &lt;func&gt; | &lt;funcall&gt;<br>
           &lt;program&gt;&nbsp;&nbsp;&nbsp;&nbsp; ::= { &lt;statement&gt;
           }&nbsp; </strong></code></div>
     <p>可用的指令組合可參考底下的範例，運算式可使用括號，你的瀏覽器必須支援 ES6 模組。</p>
