--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <li>九九乘法表</li>
     </ul>
     <pre><strong><code>i = 9
-until0 i
+while i > 0
     j = 8
     a = 10 - i
-    until0 j
+    while j > 0
         b = 10 - j
         print b
         print '*'
@@ -96,7 +96,7 @@ end</code></strong></pre>
     print ' '
     print fn2
     print ' '
-    until0 n
+    while n > 0
         fn = fn2 + fn1
         print fn
         print ' '
