--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@ printFibonacciNumbers(20)</code></strong></pre>
         print ' to '
         print c
         print '\n'
-    end
-    if n != 1
+    else
         hanoi(n - 1, a, c, b)
         hanoi(1, a, b, c)
         hanoi(n - 1, b, a, c) 
