--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
     <ul>
       <li>九九乘法表</li>
     </ul>
-    <pre><strong><code>i = 9
-while i &gt; 0
-    j = 8
-    a = 10 - i
-    while j &gt; 0
-        b = 10 - j
-        print b + '*' + a + '=' + (b * a) + '\t'
-        j = j - 1
+    <pre><strong><code>i = 1
+while i &lt; 10
+    j = 2
+    while j &lt; 10
+        print j + '*' + i + '=' + (j * i) + '\t'
+        j = j + 1
     end
     print '\n'
-    i = i - 1
+    i = i + 1
 end</code></strong></pre>
     <ul>
       <li>費式數列</li>
