--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body> <a href="https://openhome.cc"><img src="https://openhome.cc/Gossip/images/caterpillar_small_front.jpg"></a>
     <p>相關程式碼可在 <a href="https://github.com/JustinSDK/toy_lang">Github</a>
-      找到，這是首次嘗試打造的玩具語言，可用的指令組合可參考底下的範例，運算式可使用括號，你的瀏覽器必須支援 ES6 模組。 </p>
+      找到，這是首次嘗試打造的玩具語言，可用的指令組合可參考底下的範例，你的瀏覽器必須支援 ES6 模組。 </p>
     <ul>
       <li>九九乘法表</li>
     </ul>
