--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ end</code></strong></pre>
     <ul>
       <li>實驗室</li>
     </ul>
-    <textarea id="code">print 'Hello, World'</textarea> <br>
+    <textarea id="code">print 'Hello\' World'</textarea> <br>
     <br>
     <button id="run">執行</button> <br>
     <br>
