--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ end</code></strong></pre>
     <br>
     <textarea readonly="readonly" id="tty" style="background: #000;color:#fff;"></textarea>
     <script type="module">
-    import {Context} from './js/ast/context.js';
+    import {Context} from './js/context.js';
     import {Tokenizer} from './js/tokenizer.js';
     import {Parser} from './js/parser.js';
 
