--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Toy lang is the first language I made and might be a prototype if you want to design your own language.  
         The following examples contain several syntaxes of Toy lang.  ES6 modules support is required. </p>
     <ul>
-      <li>Multiplication Table</li>
+      <li># Multiplication Table</li>
     </ul>
     <pre><strong><code>def print_row(n)
     i = 2
@@ -43,7 +43,7 @@ while i &lt; 10
     i = i + 1
 end</code></strong></pre>
     <ul>
-      <li>Fibonacci Numbers</li>
+      <li># Fibonacci Numbers</li>
     </ul>
     <pre><strong><code>def printFibonacciNumbers(n)
     print(n + ' Fibonacci numbers\n')
@@ -64,7 +64,7 @@ end
 printFibonacciNumbers(10)
 printFibonacciNumbers(20)</code></strong></pre>
 <ul>
-    <li>Tower of Hanoi</li>
+    <li># Tower of Hanoi</li>
   </ul>
   <pre><strong><code>def hanoi(n, a, b, c) 
     if n == 1
@@ -78,7 +78,7 @@ end
 
 hanoi(3, 'A', 'B', 'C')</code></strong></pre>
 <ul>
-    <li>Factorial</li>
+    <li># Factorial</li>
   </ul>
   <pre><strong><code>def factorial(n)
     if n == 0
@@ -96,7 +96,8 @@ end</code></strong></pre>
     <ul>
       <li>Laboratory</li>
     </ul>
-    <textarea id="code">print('Hello World')</textarea> <br>
+    <textarea id="code"># Is a language easier if 'Hello World' is easier?
+print('Hello World')</textarea> <br>
     <br>
     <button id="run">Run It</button> <br>
     <br>
