--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ print('Hello World')</textarea> <br>
     <br>
     <textarea readonly="readonly" id="tty" style="background: #000;color:#fff;"></textarea>
     <script type="module">
+    import {Tokenizer} from './js/tokenizer/tokenizer.js';        
     import {Context} from './js/context.js';
-    import {Tokenizer} from './js/tokenizer.js';
     import {Parser} from './js/parser.js';
 
     const ENVIRONMENT = {
