--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ println('Hello World')</textarea> <br>
     <script type="module">
     import {Tokenizer} from './js/tokenizer/tokenizer.js';        
     import {Context} from './js/context.js';
-    import {Parser} from './js/parser.js';
+    import {Parser} from './js/toy_parser.js';
 
     const ENVIRONMENT = {
         output(value) {
