--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ println('Hello World')</textarea> <br>
     <textarea readonly="readonly" id="tty" style="background: #000;color:#fff;"></textarea>
     <script type="module">
     import {Tokenizer} from './js/tokenizer/tokenizer.js';        
-    import {Context} from './js/context.js';
+    import {Context} from './js/ast/context.js';
     import {ToyParser} from './js/toy_parser.js';
 
     const ENVIRONMENT = {
