--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ end
 
 acct = new Account('123', 'Justin')
 acct.deposit(100)
-println(acct.toString())</code></strong></pre>
+println(acct)</code></strong></pre>
     <ul>
       <li>Laboratory</li>
     </ul>
