--- a/index.html
+++ b/index.html
@@ -102,6 +102,29 @@ while n &lt;= 5 {
 acct = new Account('123', 'Justin')
 acct.deposit(100)
 println(acct)</code></strong></pre>
+<ul>
+    <li># Built-in Classes</li>
+  </ul>
+  <pre><strong><code>def sum(lt) {
+    if lt.isEmpty() {
+        return 0
+    }
+ 
+    return lt.get(0) + sum(lt.slice(1))
+ }
+ 
+ lt = new List()
+ i = 1
+ while i &lt;= 10 {
+     lt.append(i)
+     i = i + 1
+ }
+ 
+ println(lt.join(' + ') + ' = ' + sum(lt))
+ 
+ x = new String('aBc')
+ println(x.toUpperCase())
+ println(x.toLowerCase())</code></strong></pre>
     <ul>
       <li>Laboratory</li>
     </ul>
